# web-game-experiment

./: .gitignore  LICENSE  package.json  readme.md  tsconfig.json  webpack.config.js
client/: package-lock.json  package.json  webpack.config.js
client/src/image/tileset/: tileset1.json
client/src/script/: app.ts  config.yaml  globals.d.ts  utils.ts  vendor.ts
client/src/script/actor/: ball.ts  wall.ts
client/src/script/core/: actor.ts  asset.ts  config.ts  game.ts  input.ts  log.ts  network.ts  physic.ts  render.ts  utils.ts
client/src/stylesheet/: base.css
server/: CMakeLists.txt  main.cpp
src/: app.js  app.ts  vendor.js
src/image/tileset/: tileset1.json
src/script/: app.ts  config.yaml  globals.d.ts  utils.ts
src/script/actor/: ball.ts  base.ts  bunny.ts  wall.ts
src/script/core/: actor.ts  asset.ts  config.ts  game.ts  input.ts  physic.ts  render.ts  utils.ts
src/scripts/: app.ts  vendor.ts
src/scripts/actor/: base.ts  bunny.ts
src/scripts/core/: asset.ts  config.ts  game.ts  input.ts  log.ts  network.ts  physic.ts  render.ts
src/scripts/pixi/: actor.ts  assets.ts  input.ts  utils.ts  world.ts
src/styles/: base.css
src/stylesheet/: base.css
