CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(server)

# Target C++11
set(CMAKE_CXX_STANDARD 11)

# Define vender paths
SET (BOX2D_BUILDS_DIR "${CMAKE_SOURCE_DIR}/include/Box2D/Box2D/Build/Box2D")
SET (BOX2D_SOURCE_DIR "${CMAKE_SOURCE_DIR}/include/Box2D/Box2D")

# Define local paths
SET(SOURCE_FILES main.cpp)

# Include headers
INCLUDE_DIRECTORIES( BEFORE ${BOX2D_SOURCE_DIR} )

# Include libraries
LINK_DIRECTORIES(${BOX2D_BUILDS_DIR})

# Output EXE
ADD_EXECUTABLE(server ${SOURCE_FILES})

# Link EXE
TARGET_LINK_LIBRARIES(server libBox2D.a)